kustomize/overlay/prod/custom-templates-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-templates-prod
  labels:
    environmentId: env_7bec5ac9-2a21-484d-866a-510f177afaa3
    projectId: project_65b1f990-30d5-441e-9629-aee42c623c48
    projectName: custom-templates
    environmentName: prod
    organizationId: org_5bdc6e05-06b5-4d67-91b9-f020de5fdd93
