kustomize/overlay/prod/iwiick-only-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-only-prod
  labels:
    environmentId: env_a4622bce-9f39-4963-a28a-f1c29f783490
    projectId: project_77fc5bdd-b9e4-4d41-be85-7f146071fef4
    projectName: iwiick-only
    environmentName: prod
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
