kustomize/overlay/prod/iwiick-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-prod
  labels:
    environmentId: env_ebe32f30-bb97-49c1-a273-69ecea6c203b
    projectId: project_33d6eb31-f21a-4bbe-b322-75295d837ed8
    projectName: iwiick
    environmentName: prod
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
