kustomize/overlay/prod/custom-templates-2-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: custom-templates-2-prod
  labels:
    organizationId: org_5bdc6e05-06b5-4d67-91b9-f020de5fdd93
    projectId: project_79b54f97-5851-42fe-ba86-c5428a8df10d
    environmentId: env_6d6f721e-9fd9-4411-8add-48a2717a8895
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_6d6f721e-9fd9-4411-8add-48a2717a8895
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
