kustomize/overlay/prod/iwiick-proj-1-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-proj-1-prod
  labels:
    organizationId: org_d2ea4601-f582-4e43-921d-6a60eea704b3
    projectId: project_f25ad2e4-cf21-410c-b7fb-a8adad864a23
    environmentId: env_fad2a24f-7b73-4db2-9aab-09d857740d50
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_fad2a24f-7b73-4db2-9aab-09d857740d50
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
